# wrds2pg

./: .gitignore  README.md  __init__.py  last_modified_csv.ipynb  minimal_test.ipynb  pyproject.toml  setup.py  test_encoding.ipynb  test_missing_table.ipynb  tz_sas.ipynb  tz_test.ipynb  wrds2pg.py  wrds_to_parquet.ipynb  wrds_update_csv_test.ipynb  wrds_update_pq_test.ipynb  wrds_update_test.ipynb  write_metadata.ipynb
wrds2pg/: __init__.py  _utils.py  api.py  gzip_test.ipynb  wrds2pg.py
wrds2pg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
wrds2pg/files/: csv.py  parquet.py  paths.py
wrds2pg/postgres/: copy.py  ddl.py  engine.py
wrds2pg/sas/: codegen.py  metadata.py  preamble.py  stream.py
wrdstopg.egg-info/: PKG-INFO  SOURCES.txt
