[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrds2pg"
version = "1.0.36"

description = "Convert WRDS SAS data to PostgreSQL, parquet, or CSV."
readme = { file = "README.md", content-type = "text/markdown" }

authors = [
  { name = "Ian Gow", email = "iandgow@gmail.com" }
]

requires-python = ">=3.10"

dependencies = [
  "pandas",
  "sqlalchemy>=2.0.0",
  "paramiko",
  "psycopg[binary]",
  "pyarrow",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/iangow/wrds2pg/"
Repository = "https://github.com/iangow/wrds2pg/"
Issues = "https://github.com/iangow/wrds2pg/issues"

[tool.setuptools]
packages = { find = {} }
